003: add desktop ordering

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,12 +4,12 @@
            style="background-image: url('../assets/images/Frame 8 (2).png')">
 
     <div class="flex flex-col lg:flex-row">
-      <div class="w-full lg:w-1/2 order-2">
+      <div class="w-full lg:w-1/2 order-2 lg:order-1">
         <img src="../assets/images/pink-creature.png" alt="Cosmic Creatures Pink Creature">
       </div>
 
 
-      <div class="p-4 flex flex-col gap-y-11 items-end w-full lg:w-1/2 text-white">
+      <div class="p-4 flex flex-col gap-y-11 items-end w-full lg:w-1/2 text-white lg:order-2">
         <div type="button" class="btn btn-primary btn-lg z-10">
           Connect Wallet
         </div>
@@ -57,7 +57,7 @@
   </section>
 
   <section class="bg-cover bg-no-repeat h-full" style="background-image: url('../assets/images/Frame 8 (2).png')">
-    <div class="flex flex-col">
+    <div class="flex flex-col p-4 text-center">
       <h2 class="type-h2">Limited Edition Stardust, Infinite
         Journeys</h2>
 
@@ -67,8 +67,8 @@
       </p>
     </div>
 
-    <div class="flex">
-      <div class="w-1/2">
+    <div class="flex flex-col lg:flex-row">
+      <div class="flex flex-col justify-center lg:order-1 order-2 w-full p-4 lg:w-1/2">
         <h2 class="type-h2">Embodied Stardust:
           A Timeless Elegance
         </h2>
@@ -87,13 +87,13 @@
           the fabric of galaxies.
         </p>
       </div>
-      <div class="w-1/2">
+      <div class="lg:order-2 order-1 w-full lg:w-1/2">
         <img class="" src="../assets/images/blue-creature.png" alt="Blue Creature">
       </div>
 
     </div>
 
-    <footer class="container mx-auto">
+    <footer class="p-4">
       <div class="flex flex-col text-center">
         <h2 class="type-h2">Join the Community</h2>
         <p class="type-p">Celestial Exploration: Immerse yourself in the Cosmic Creatures Collection, where the stories
