--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="flex flex-col lg:flex-row">
-      <div class="flex flex-col justify-center lg:order-1 order-2 w-full p-4 lg:w-1/2">
+      <div class="flex text-center flex-col justify-center lg:order-1 order-2 w-full p-4 lg:w-1/2">
         <h2 class="type-h2">Embodied Stardust:
           A Timeless Elegance
         </h2>
@@ -107,11 +107,11 @@
           keeper of stories untold.</p>
       </div>
 
-      <div class="flex flex-col items-center justify-center py-16">
+      <div class="flex flex-col items-center justify-center my-16">
         <h3 class="type-h3 text-center">
           From stardust to eternity. Explore the cosmos. Join the timeless journey of the Cosmic Creatures Collection.
         </h3>
-        <div class="flex gap-x-7">
+        <div class="flex gap-x-7 mt-16">
           <img class="" src="../assets/images/discord-icon.png"
                alt="Twitter Icon">
           <img class="" src="../assets/images/instagram-icon.png"
