--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,7 +1,7 @@
 // Tailwind CSS
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 // Custom CSS
 @import "typography";
