003: add links stylesheet

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -112,11 +112,12 @@
           From stardust to eternity. Explore the cosmos. Join the timeless journey of the Cosmic Creatures Collection.
         </h3>
         <div class="flex gap-x-7 mt-16">
-          <img class="" src="../assets/images/discord-icon.png"
+          <!-- TODO: These should be svg's -->
+          <img class="link__social" src="../assets/images/discord-icon.png"
                alt="Twitter Icon">
-          <img class="" src="../assets/images/instagram-icon.png"
+          <img class="link__social" src="../assets/images/instagram-icon.png"
                alt="Discord Icon">
-          <img class="" src="../assets/images/x-icon.png"
+          <img class="link__social" src="../assets/images/x-icon.png"
                alt="Instagram Icon">
         </div>
       </div>
