003: Use correct tags for buttons

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,9 +10,9 @@
 
 
       <div class="p-4 flex flex-col gap-y-11 items-end w-full lg:w-1/2 text-white lg:order-2">
-        <div type="button" class="btn btn-primary btn-lg z-10">
+        <button type="button" class="btn btn-primary btn-lg z-10">
           Connect Wallet
-        </div>
+        </button>
         <h1 class="type-display">Cosmic Creatures</h1>
       </div>
     </div>
@@ -44,9 +44,9 @@
             </div>
           </div>
 
-          <div type="button" class="btn btn-primary btn-lg z-10 mt-16">
+          <button type="button" class="btn btn-primary btn-lg z-10 mt-16">
             Join Discord
-          </div>
+          </button>
         </div>
       </div>
 
