003: Sort out some more spacing issues on desktop

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -56,8 +56,9 @@
 
   </section>
 
-  <section class="bg-cover bg-no-repeat h-full" style="background-image: url('../assets/images/Frame 8 (2).png')">
-    <div class="flex flex-col p-4 text-center">
+  <section class="flex flex-col bg-cover bg-no-repeat h-full items-center" style="background-image: url('../assets/images/Frame 8 (2).png')">
+
+    <div class="flex flex-col p-4 text-center w-3/4 my-16">
       <h2 class="type-h2">Limited Edition Stardust, Infinite
         Journeys</h2>
 
